# report_module

./: .gitignore  Dev.ipynb  LICENSE  README.md  main.py  pyproject.toml  report_data.json  requirements.txt
brainbuilding_report/: main.py
