[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brainbuilding-report"
version = "0.1.0"
description = "report module"
authors = [{name = "Vladimir Antipov"}]
license = {text = "MIT"}
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pyxdf>=1.16"
]

[tool.setuptools]
packages = ["brainbuilding_report"]